# topChart

./: CMakeLists.txt  README.md
data/: words.py
res/: qml.qrc
res/qml/: Bars.qml  main.qml
src/: filemanager.cpp  filemanager.h  main.cpp  postprocessing.cpp  postprocessing.h
